--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "run-p build:*",
     "build:common": "tsc",
-    "build:esm": "tsc -p tsconfig.esm.json"
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "test": "jest"
   },
   "keywords": [
     "csv"
@@ -20,9 +21,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/types": "^28.1.3",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
+    "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
