feat: add linters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,9 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
-    "lib": [
-      "ESNext"
-    ],
-    "types": [
-      "node",
-      "jest"
-    ],
+    "lib": ["ESNext"],
+    "types": ["node", "jest"],
     "outDir": "dist"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
