--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "run-p build:*",
     "build:common": "tsc",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "test": "jest"
+    "test": "jest",
+    "lint": "run-s lint:*",
+    "lint:eslint": "eslint . --ext .ts,.tsx --fix",
+    "lint:prettier": "prettier --write ."
   },
   "keywords": [
     "csv"
@@ -21,14 +24,22 @@
   "bin": {
     "my-hello-lib": "dist/bin/index.js"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@jest/types": "^28.1.3",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
