chore: update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
           node-version: '16'
           cache: npm
           cache-dependency-path: package-lock.json
-      - run: npm install
+      - run: npm ci
       - run: npm test
       - run: npm run lint
