--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
